[package]
name = "blocksy2"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
async-channel = "1.5.1"
futures = "0.3.6"
